# telco-customer-service-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AI Engineer - Technical Assignment.docx.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
docs/: SYSTEM_DESIGN.md  architecture.excalidraw
knowledge_base/: billing_policy.md  service_plans.md  troubleshooting_guide.md
plan/: 00-project-setup.md  01-q1-ai-agent.md  02-q2-system-design.md  03-deployment-demo.md
scripts/: ingest.py
src/: main.py
src/agent/: service.py
src/api/: router.py  schemas.py
src/core/: config.py  prompts.py  security.py
src/rag/: embeddings.py  ingestion.py  retriever.py  vector_store.py
streamlit_app/: Dockerfile  app.py
tests/unit/: test_agent.py  test_ingestion.py  test_security.py  test_vector_store.py
